--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -35,6 +35,38 @@
     <string name="areyousure">Сигурни ли сте?</string>
     <string name="phone_not_compatible">Xposed не е съвместим с Android SDK версия %1$d или с архитектурата на вашия процесор (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed не е изпробван с SDK версия %d, но изглежда е съвместим. Може да го инсталирате, ако се смятате за подготвени.</string>
+    <string name="reboot_failed">Рестартирането не е възможно. Моля използвайте нормалната функция за рестартиране на устройството.</string>
+    <string name="auto_flash_note">%s ще бъде flash-нат автоматично след като натиснете "OK".</string>
+    <string name="manual_flash_note">Моля flash-нете %s от SD картата за да завършите операцията.</string>
+    <string name="reboot_confirmation">Да рестартирам ли сега?</string>
+    <string name="reboot_recovery_confirmation">Да рестартирам ли в recovery?</string>
+    <string name="install_warning_title">Бъдете внимателни!</string>
+    <string name="install_warning">В някои случаи е възможно, след инсталиране на Xposed вашето устройство да не стартира.\n\nАко никога не сте чували за \"soft brick\" и \"bootloop\" или ако незнаете как да възстановите устройството в такава ситуация, <b>НЕ</b> инсталирайте Xposed!\n\nВъв всеки случай се препоръчва да имате скорошно резервно копие.</string>
+    <string name="dont_show_again">Не показвай отново</string>
+
+    <!-- File operations -->
+    <string name="root_failed">Няма root достъп.\n\nУбедете се, че устройството Ви е root-нато и не сте блокирали shell командите.</string>
+    <string name="file_extract_failed">Не може да се извлече %s</string>
+    <string name="file_mounting_writable">Монтиране на %s за запис&#8230;</string>
+    <string name="file_mount_writable_failed">Не може да се монтира %s за запис</string>
+    <string name="file_trying_to_continue">Опит за продължение въпреки това&#8230;</string>
+    <string name="file_backup_already_exists">Резервно копие съществува в %s</string>
+    <string name="file_backup_not_found">Не е намерено резервно копие в %s</string>
+    <string name="file_backup_failed">Не може да се създаде резервно копие на %s</string>
+    <string name="file_backup_successful">Създадено е резервно копие в %s</string>
+    <string name="file_backup_restoring">Възстановяване на резервно копие от %s</string>
+    <string name="file_copying">Копиране %s&#8230;</string>
+    <string name="file_copy_failed">Не може да се копира %1$s в %2$s</string>
+    <string name="file_move_failed">Не може да се премести %1$s в %2$s</string>
+    <string name="file_set_perms_failed">Не може да се зададът позволения за %s</string>
+    <string name="file_set_owner_failed">Не може да се зададе собственика за %s</string>
+    <string name="file_removing">Премахване %s&#8230;</string>
+    <string name="file_remove_failed">Не може да се премахне %s</string>
+    <string name="file_creating_directory">Създаване на папка %s&#8230;</string>
+    <string name="file_create_directory_failed">Не може да се създаде папка %s</string>
+    <string name="file_writing_recovery_command">Запис на команда за възстановяване&#8230;</string>
+    <string name="file_writing_recovery_command_failed">Не може да се запише команда за възстановяване. Моля използвайте друг метод за инсталация.</string>
+    <string name="file_done">Готово! Промените ще се активират след рестарт.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Модула за Xposed не е активиран</string>
@@ -67,37 +99,50 @@
     <string name="download_sorting_created">Подреди по дата на създаване</string>
     <string name="download_section_framework">Framework</string>
     <string name="download_section_update_available">Налично обновление</string>
-    <string name="download_section_installed">Инсталиран</string>
-    <string name="download_section_not_installed">Не е инсталиран</string>
+    <string name="download_section_installed">Инсталирани</string>
+    <string name="download_section_not_installed">Не са инсталирани</string>
     <string name="download_section_24h">Преди 24 часа</string>
     <string name="download_section_7d">Преди 7 дни</string>
     <string name="download_section_30d">Преди 30 дни</string>
     <string name="download_section_older">Преди повече от 30 дни</string>
 
     <!-- Settings tab -->
+    <string name="settings_group_installation">Инсталиране</string>
+    <string name="settings_install_mode">Режим на инсталиране</string>
+    <string name="install_mode_normal">Класически (запис в папка /system)</string>
+    <string name="install_mode_recovery_auto">Recovery (flash zip автоматично)</string>
+    <string name="install_mode_recovery_manual">Recovery (запис на zip в SD картата, flash ръчно)</string>
     <string name="settings_group_download">Изтегляне</string>
     <string name="settings_enable_downloads">Позволи изтегляния</string>
     <string name="settings_enable_downloads_summary">Позволи на Xposed Installer да проверява за обновления и нови модули</string>
-    <string name="settings_group_experimental">Производителност</string>
+    <string name="settings_group_experimental">Експериментално</string>
+    <string name="settings_disable_resources">Изключевно прихващане на ресурси</string>
+    <string name="settings_disable_resources_summary">Решаване на конфликти с темите\n<b>ВНИМАНИЕ:</b> Модули които се опитват да променят ресурсите няма да работят.</string>
     <string name="settings_performance_experiment">Експеримент за производителност</string>
     <string name="settings_performance_experiment_summary">Ако позволите това, производителността на системата може да се увеличи, да се намали или да се запази. Чувствайте се свободни да пробвате и да дадете отзиви. Необходимо е да преинсталирате framework и да рестартирате след промяна на тази настройка.</string>
+
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">Неможе да се прочете дневника:</string>
     <string name="logs_save_failed">Дневника неможе да се запише на SD картата:</string>
     <string name="sdcard_not_writable">SD картата не съществува, или не е за запис</string>
+    <string name="log_too_large">Дневника е по-голям от %1$,d kB, пропуснати са първите %2$,d kB</string>
+    <string name="menuClearLog">Изчисти дневника</string>
+    <string name="logs_cleared">Дневника е изчистен успешно</string>
+    <string name="logs_clear_failed">Дневника неможе да се изчисти:</string>
+    <string name="log_is_empty">Дневника е празен</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Разработчици:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> и <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
-    <string name="about_developers_warning">Моля <b>не</b> се свързвайте с нс директно, използвайте долния линк.</string>
+    <string name="about_developers_warning">Моля <b>не</b> се свързвайте с нас директно, използвайте долния линк.</string>
     <string name="about_translator_label">Преводач:</string>
     <string name="translator">mamutcho</string>
     <string name="about_version_label">Версия:</string>
     <string name="about_source_label">Изходен код:</string>
-    <string name="about_support_label">Поддръжка на:</string>
-    <string name="about_support_warning">Тази връзка е за инсталатора <b>само</b> на framework! Ако имате нужда от помощ с някой от модулите, <b>не</b> я използвайте, свържете се с автора на модула.</string>
-    <string name="about_libraries_label">Използвано библиотеки:</string>
+    <string name="about_support_label">Поддръжка:</string>
+    <string name="about_support_warning">Тази връзка е <b>само</b> за инсталатора на framework! Ако имате нужда от помощ с някой от модулите, <b>не</b> я използвайте, свържете се с автора на модула.</string>
+    <string name="about_libraries_label">Използвани библиотеки:</string>
 
     <!-- DownloadView -->
     <string name="download_view_download">Изтегли</string>
