--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,46 +3,46 @@
 
     <!-- General/various strings -->
     <string name="app_name">Xposed Installer</string>
-    <string name="menuSend">Send</string>
-    <string name="menuSaveToSd">Save to SD card</string>
-    <string name="xposed_not_active">The latest version of Xposed is currently not active. Did you install the framework and reboot?</string>
+    <string name="menuSend">ส่ง</string>
+    <string name="menuSaveToSd">เซฟไปที่ SD การ์ด</string>
+    <string name="xposed_not_active">เวอร์ชั่นช่าสุดของ Xposed ยังไม่ทำงาน คุณติดตั้งเฟรมเวิร์คและรีบู๊ตแล้วหรือยัง</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome">Welcome to the <b>Xposed Installer</b>!\nPlease choose what you want to do:</string>
-    <string name="tabInstall">Framework</string>
-    <string name="tabInstallDescription">Here you can manage the Xposed framework, which is required for any modules to work.</string>
-    <string name="tabModules">Modules</string>
-    <string name="tabModulesDescription">The framework itself doesn\'t add any functionality. You need modules for that. In this section you can activate modules after you have installed them.</string>
-    <string name="tabDownload">Download</string>
-    <string name="tabDownloadDescription">This section gives you access to a repository of modules, so you can search and download the ones you like and keep them up to date.</string>
-    <string name="welcome_framework_update_available">An update for the Xposed framework is available (%s).</string>
-    <string name="welcome_update_available">One or more update(s) for modules available.</string>
-    <string name="tabSettings">Settings</string>
-    <string name="tabSettingsDescription">Go to this section to configure the Xposed Installer and framework.</string>
+    <string name="welcome">ยินดีต้อนรับสู่ <b>Xposed Installer</b>!\nกรุณาเลือกว่าคุณต้องการทำอะไร:</string>
+    <string name="tabInstall">เฟรมเวิร์ค</string>
+    <string name="tabInstallDescription">ในส่วนนี้คุณสามารถจัดการเฟรมเวิร์ค Xposed ได้ ซึ่งจำเป็นสำหรับการทำงานของโมดูล</string>
+    <string name="tabModules">โมดูล</string>
+    <string name="tabModulesDescription">เฟรมเวิร์คอย่างเดียวทำอะไรไม่ได้ คุณต้องมีโมดูลด้วย ในส่วนนีคุณสามารถเปิดการใช้งานโมดูลที่ติดตั้งไว้แล้วได้</string>
+    <string name="tabDownload">ดาวน์โหลด</string>
+    <string name="tabDownloadDescription">ในส่วนนี้ให้คุณเข้าถึง repository ของโมดูลต่างๆ คุณสามารถค้นหา ดาวน์โหลด และอัพเดตโมดดูลได้</string>
+    <string name="welcome_framework_update_available">มีการอัพเดตใหม่ของเฟรมเวิร์ค Xposed (%s).</string>
+    <string name="welcome_update_available">มีการอัพเดตใหม่สำหรับโมดูล</string>
+    <string name="tabSettings">ตั้งค่า</string>
+    <string name="tabSettingsDescription">มาที่ส่วนนี้หากต้องการตั้งค่า Xposed Installer และเฟรมเวิร์ค</string>
     <string name="tabLogs">Logs</string>
-    <string name="tabLogsDescription">Display and save/send logs of the Xposed framework.</string>
-    <string name="tabAbout">About</string>
-    <string name="tabAboutDescription">Learn about the people who created Xposed, where to get support for this app etc.</string>
+    <string name="tabLogsDescription">แสดงและเซฟ/ส่ง logs ของเฟรมเวิร์ค Xposed</string>
+    <string name="tabAbout">เกี่ยวกับ</string>
+    <string name="tabAboutDescription">ดูว่าใครสร้าง Xposed, จะหาความช่วยเหลือของแอพนี้ได้ที่ไหน, ฯลฯ</string>
 
     <!-- Installer tab -->
-    <string name="install">Install/Update</string>
-    <string name="uninstall">Uninstall</string>
-    <string name="installedVersion">active</string>
-    <string name="latestVersion">bundled</string>
-    <string name="versions">Versions:</string>
-    <string name="soft_reboot">Soft reboot</string>
-    <string name="reboot">Reboot</string>
-    <string name="areyousure">Are you sure?</string>
-    <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s).</string>
-    <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
-    <string name="reboot_failed">Reboot failed. Please use the device\'s normal reboot function.</string>
-    <string name="auto_flash_note">%s should be flashed automatically once you press "OK".</string>
-    <string name="manual_flash_note">Please flash %s from the SD card to complete the operation.</string>
-    <string name="reboot_confirmation">Do you want to reboot now?</string>
-    <string name="reboot_recovery_confirmation">Do you want to reboot to recovery now?</string>
-    <string name="install_warning_title">Be careful!</string>
-    <string name="install_warning">In some cases, your device might no longer boot after installing Xposed.\n\nIf you never heard about \"soft brick\" and \"bootloop\" before or if you don\'t know how to recover from such a situation, do <b>NOT</b> install Xposed!\n\nIn any case, having a recent backup is highly recommended.</string>
-    <string name="dont_show_again">Don\'t show this again</string>
+    <string name="install">ติดตั้ง/อัพเดต</string>
+    <string name="uninstall">ถอนการติดตั้ง</string>
+    <string name="installedVersion">ที่ติดตั้ง</string>
+    <string name="latestVersion">ปัจจุบัน</string>
+    <string name="versions">เวอร์ชั่น:</string>
+    <string name="soft_reboot">ซอฟท์รีบู๊ต</string>
+    <string name="reboot">รีบู๊ต</string>
+    <string name="areyousure">คุณแน่ใจหรือ</string>
+    <string name="phone_not_compatible">Xposed (ยัง) ไม่รองรับ Android SDK เวอร์ชั่น %1$d หรือสถาปัตยกรรมระบบของคุณ (%2$s)</string>
+    <string name="not_tested_but_compatible">Xposed ยังไม่ถูกทดสอบกับ Android SDK เวอร์ชั่น %d แต่มันดูน่าจะทำงานด้วยกันได้ คุณสามารถลองดูได้</string>
+    <string name="reboot_failed">รีบู๊ตไม่สำเร็จ กรุณาใช้วิธีรีบู๊ตตามปกติของเครื่อง</string>
+    <string name="auto_flash_note">%s ควรจะถูกแฟลชโดยอัตโนมัติเมื่อคุณแตะ "OK"</string>
+    <string name="manual_flash_note">กรุณาแฟลช %s จาก SD การ์ดเพื่อให้ดำเนินการเสร็จสิ้น</string>
+    <string name="reboot_confirmation">คุณต้องการรีบู๊ตตอนนี้หรือไม่</string>
+    <string name="reboot_recovery_confirmation">คุณต้องการรีบู๊ตเข้า recovery เลยหรือไม่</string>
+    <string name="install_warning_title">ระวังนะ!</string>
+    <string name="install_warning">บางกรณี อุปกรณ์ของคุณอาจบู๊ตไม่ได้อีกหลังติดตั้ง Xposed\n\nถ้าคุณไม่เคยได้ยิน \"soft brick\" และ \"bootloop\" มาก่อน หรือไม่รู้ว่าจะแก้ปัญหาอย่างไรหลังเกิดปัญหาเหล่านั้น <b>อย่า</b>ติดตั้ง Xposed!\n\nอย่างไรก็ตาม การแบ๊คอัพข้อมูลไว้ก่อนก็เป็นสิ่งที่ดี</string>
+    <string name="dont_show_again">ห้ามแสดงอีก</string>
 
     <!--  File operations -->
     <string name="root_failed">Failed to get root access.\n\nMake sure your device is rooted properly and you have not blocked shell commands.</string>
