--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -3,70 +3,70 @@
 
     <!-- General/various strings -->
     <string name="app_name">Xposed Installer</string>
-    <string name="menuSend">ส่ง</string>
-    <string name="menuSaveToSd">เซฟไปที่ SD การ์ด</string>
-    <string name="xposed_not_active">เวอร์ชั่นช่าสุดของ Xposed ยังไม่ทำงาน คุณติดตั้งเฟรมเวิร์คและรีบู๊ตแล้วหรือยัง</string>
+    <string name="menuSend">Send</string>
+    <string name="menuSaveToSd">Save to SD card</string>
+    <string name="xposed_not_active">The latest version of Xposed is currently not active. Did you install the framework and reboot?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome">ยินดีต้อนรับสู่ <b>Xposed Installer</b>!\nกรุณาเลือกว่าคุณต้องการทำอะไร:</string>
-    <string name="tabInstall">เฟรมเวิร์ค</string>
-    <string name="tabInstallDescription">ในส่วนนี้คุณสามารถจัดการเฟรมเวิร์ค Xposed ได้ ซึ่งจำเป็นสำหรับการทำงานของโมดูล</string>
-    <string name="tabModules">โมดูล</string>
-    <string name="tabModulesDescription">เฟรมเวิร์คอย่างเดียวทำอะไรไม่ได้ คุณต้องมีโมดูลด้วย ในส่วนนีคุณสามารถเปิดการใช้งานโมดูลที่ติดตั้งไว้แล้วได้</string>
-    <string name="tabDownload">ดาวน์โหลด</string>
-    <string name="tabDownloadDescription">ในส่วนนี้ให้คุณเข้าถึง repository ของโมดูลต่างๆ คุณสามารถค้นหา ดาวน์โหลด และอัพเดตโมดดูลได้</string>
-    <string name="welcome_framework_update_available">มีการอัพเดตใหม่ของเฟรมเวิร์ค Xposed (%s).</string>
-    <string name="welcome_update_available">มีการอัพเดตใหม่สำหรับโมดูล</string>
-    <string name="tabSettings">ตั้งค่า</string>
-    <string name="tabSettingsDescription">มาที่ส่วนนี้หากต้องการตั้งค่า Xposed Installer และเฟรมเวิร์ค</string>
+    <string name="welcome">Welcome to the <b>Xposed Installer</b>!\nPlease choose what you want to do:</string>
+    <string name="tabInstall">Framework</string>
+    <string name="tabInstallDescription">Here you can manage the Xposed framework, which is required for any modules to work.</string>
+    <string name="tabModules">Modules</string>
+    <string name="tabModulesDescription">The framework itself doesn\'t add any functionality. You need modules for that. In this section you can activate modules after you have installed them.</string>
+    <string name="tabDownload">Download</string>
+    <string name="tabDownloadDescription">This section gives you access to a repository of modules, so you can search and download the ones you like and keep them up to date.</string>
+    <string name="welcome_framework_update_available">An update for the Xposed framework is available (%s).</string>
+    <string name="welcome_update_available">One or more update(s) for modules available.</string>
+    <string name="tabSettings">Settings</string>
+    <string name="tabSettingsDescription">Go to this section to configure the Xposed Installer and framework.</string>
     <string name="tabLogs">Logs</string>
-    <string name="tabLogsDescription">แสดงและเซฟ/ส่ง logs ของเฟรมเวิร์ค Xposed</string>
-    <string name="tabAbout">เกี่ยวกับ</string>
-    <string name="tabAboutDescription">ดูว่าใครสร้าง Xposed, จะหาความช่วยเหลือของแอพนี้ได้ที่ไหน, ฯลฯ</string>
+    <string name="tabLogsDescription">Display and save/send logs of the Xposed framework.</string>
+    <string name="tabAbout">About</string>
+    <string name="tabAboutDescription">Learn about the people who created Xposed, where to get support for this app etc.</string>
 
     <!-- Installer tab -->
-    <string name="install">ติดตั้ง/อัพเดต</string>
-    <string name="uninstall">ถอนการติดตั้ง</string>
-    <string name="installedVersion">ที่ติดตั้ง</string>
-    <string name="latestVersion">ปัจจุบัน</string>
-    <string name="versions">เวอร์ชั่น:</string>
-    <string name="soft_reboot">ซอฟท์รีบู๊ต</string>
-    <string name="reboot">รีบู๊ต</string>
-    <string name="areyousure">คุณแน่ใจหรือ</string>
-    <string name="phone_not_compatible">Xposed (ยัง) ไม่รองรับ Android SDK เวอร์ชั่น %1$d หรือสถาปัตยกรรมระบบของคุณ (%2$s)</string>
-    <string name="not_tested_but_compatible">Xposed ยังไม่ถูกทดสอบกับ Android SDK เวอร์ชั่น %d แต่มันดูน่าจะทำงานด้วยกันได้ คุณสามารถลองดูได้</string>
-    <string name="reboot_failed">รีบู๊ตไม่สำเร็จ กรุณาใช้วิธีรีบู๊ตตามปกติของเครื่อง</string>
-    <string name="auto_flash_note">%s ควรจะถูกแฟลชโดยอัตโนมัติเมื่อคุณแตะ "OK"</string>
-    <string name="manual_flash_note">กรุณาแฟลช %s จาก SD การ์ดเพื่อให้ดำเนินการเสร็จสิ้น</string>
-    <string name="reboot_confirmation">คุณต้องการรีบู๊ตตอนนี้หรือไม่</string>
-    <string name="reboot_recovery_confirmation">คุณต้องการรีบู๊ตเข้า recovery เลยหรือไม่</string>
-    <string name="install_warning_title">ระวังนะ!</string>
-    <string name="install_warning">บางกรณี อุปกรณ์ของคุณอาจบู๊ตไม่ได้อีกหลังติดตั้ง Xposed\n\nถ้าคุณไม่เคยได้ยิน \"soft brick\" และ \"bootloop\" มาก่อน หรือไม่รู้ว่าจะแก้ปัญหาอย่างไรหลังเกิดปัญหาเหล่านั้น <b>อย่า</b>ติดตั้ง Xposed!\n\nอย่างไรก็ตาม การแบ๊คอัพข้อมูลไว้ก่อนก็เป็นสิ่งที่ดี</string>
-    <string name="dont_show_again">ห้ามแสดงอีก</string>
+    <string name="install">Install/Update</string>
+    <string name="uninstall">Uninstall</string>
+    <string name="installedVersion">active</string>
+    <string name="latestVersion">bundled</string>
+    <string name="versions">Versions:</string>
+    <string name="soft_reboot">Soft reboot</string>
+    <string name="reboot">Reboot</string>
+    <string name="areyousure">Are you sure?</string>
+    <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s).</string>
+    <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
+    <string name="reboot_failed">Reboot failed. Please use the device\'s normal reboot function.</string>
+    <string name="auto_flash_note">%s should be flashed automatically once you press "OK".</string>
+    <string name="manual_flash_note">Please flash %s from the SD card to complete the operation.</string>
+    <string name="reboot_confirmation">Do you want to reboot now?</string>
+    <string name="reboot_recovery_confirmation">Do you want to reboot to recovery now?</string>
+    <string name="install_warning_title">Be careful!</string>
+    <string name="install_warning">In some cases, your device might no longer boot after installing Xposed.\n\nIf you never heard about \"soft brick\" and \"bootloop\" before or if you don\'t know how to recover from such a situation, do <b>NOT</b> install Xposed!\n\nIn any case, having a recent backup is highly recommended.</string>
+    <string name="dont_show_again">Don\'t show this again</string>
 
     <!--  File operations -->
-    <string name="root_failed">ไม่สามารถใช้สิทธิ์ root\n\nแน่ใจนะว่าเครื่องคุณรูทมาถูกต้องแล้ว และคุณไม่ได้บล๊อค shell commands</string>
-    <string name="file_extract_failed">ไม่สามารถแตกไฟล์ %s</string>
+    <string name="root_failed">Failed to get root access.\n\nMake sure your device is rooted properly and you have not blocked shell commands.</string>
+    <string name="file_extract_failed">Could not extract %s</string>
     <string name="file_mounting_writable">Mounting %s writable&#8230;</string>
     <string name="file_mount_writable_failed">Could not mount %s writable</string>
-    <string name="file_trying_to_continue">จะพยายามทำต่อไป&#8230;</string>
-    <string name="file_backup_already_exists">มีแบ๊คอัพแล้วที่ %s</string>
-    <string name="file_backup_not_found">ไม่มีแบ๊คอัพที่ %s</string>
-    <string name="file_backup_failed">สร้างแบ๊คอัพของ %s ไม่สำเร็จ</string>
-    <string name="file_backup_successful">สร้างแบ๊คอัพแล้วที่ %s</string>
-    <string name="file_backup_restoring">กำลังกู้คืนจากแบ๊คอัพที่ %s</string>
-    <string name="file_copying">กำลังคัดลอก %s&#8230;</string>
-    <string name="file_copy_failed">ไม่สามารถคัดลอก %1$s ไปยัง %2$s</string>
-    <string name="file_move_failed">ไม่สามารถย้าย %1$s ไปยัง %2$s</string>
-    <string name="file_set_perms_failed">ไม่สามารถตั้ง permissions สำหรับ %s</string>
-    <string name="file_set_owner_failed">ไม่สามารถตั้ง owner สำหรับ %s</string>
-    <string name="file_removing">กำลังนำ %s ออก&#8230;</string>
-    <string name="file_remove_failed">ไม่สามารถนำ %s ออก</string>
-    <string name="file_creating_directory">กำลังสร้างไดเรคทอรี %s&#8230;</string>
-    <string name="file_create_directory_failed">ไม่สามารถสร้างร้างไดเรคทอรี %s</string>
-    <string name="file_writing_recovery_command">กำลังเขียนคำสั่ง recovery&#8230;</string>
-    <string name="file_writing_recovery_command_failed">เขียนคำสั่ง recovery ไม่สำเร็จ กรุณาลองการติดตั้งด้วยวิธีอื่น</string>
-    <string name="file_done">เสร็จ! การเปลี่ยนแปลงจะปรากฏหลังรีบู๊ต</string>
+    <string name="file_trying_to_continue">Trying to continue anyway&#8230;</string>
+    <string name="file_backup_already_exists">Backup already exists at %s</string>
+    <string name="file_backup_not_found">No backup found at %s</string>
+    <string name="file_backup_failed">Failed to create a backup of %s</string>
+    <string name="file_backup_successful">Created backup at %s</string>
+    <string name="file_backup_restoring">Restoring backup from %s</string>
+    <string name="file_copying">Copying %s&#8230;</string>
+    <string name="file_copy_failed">Could not copy %1$s to %2$s</string>
+    <string name="file_move_failed">Could not move %1$s to %2$s</string>
+    <string name="file_set_perms_failed">Could not set permissions for %s</string>
+    <string name="file_set_owner_failed">Could not set owner for %s</string>
+    <string name="file_removing">Removing %s&#8230;</string>
+    <string name="file_remove_failed">Could not remove %s</string>
+    <string name="file_creating_directory">Creating directory %s&#8230;</string>
+    <string name="file_create_directory_failed">Could not create directory %s</string>
+    <string name="file_writing_recovery_command">Writing recovery command&#8230;</string>
+    <string name="file_writing_recovery_command_failed">Writing recovery command failed. Please use a different installation method.</string>
+    <string name="file_done">Done! Changes will become active on reboot.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
@@ -144,20 +144,20 @@
     <string name="about_libraries_label">Used libraries:</string>
 
     <!-- DownloadView -->
-    <string name="download_view_download">ดาวน์โหลด</string>
-    <string name="download_view_install">ติดตั้ง</string>
-    <string name="download_view_cancel">ยกเลิก</string>
+    <string name="download_view_download">Download</string>
+    <string name="download_view_install">Install</string>
+    <string name="download_view_cancel">Cancel</string>
     <string name="download_view_no_url">No download URL available</string>
-    <string name="download_view_running">กำลังดาวน์โหลด (%1$,d จาก %2$,d kB)</string>
-    <string name="download_view_waiting">กำลังรอดาวน์โหลด</string>
-    <string name="download_view_successful">ดานว์โหลดสำเร็จ</string>
-    <string name="download_view_failed">ดาวน์โหลดไม่สำเร็จ (error %d)</string>
+    <string name="download_view_running">Download is running (%1$,d of %2$,d kB)</string>
+    <string name="download_view_waiting">Download is waiting</string>
+    <string name="download_view_successful">Download successful</string>
+    <string name="download_view_failed">Download failed (error %d)</string>
 
     <!-- DownloadUtils -->
-    <string name="download_md5sum_incorrect">MD5 sum ไม่ถูกต้อง (ที่ดาวน์โหลด: %1$s, ที่คาดไว้: %2$s)</string>
-    <string name="download_could_not_read_file">ไม่สามารถอ่านไฟล์ที่ดาวน์โหลดมา: %s</string>
-    <string name="download_no_valid_apk">ไฟล์ที่ดาวน์โหลดมาไม่ใช่ APK ที่ถูกต้อง (หรือไม่ก็ไม่รองรับ)</string>
-    <string name="download_incorrect_package_name">ชื่อแพ็คเกจไม่ถูกต้อง (ที่ดาวน์โหลด: %1$s, ที่คาดไว้: %2$s)</string>
+    <string name="download_md5sum_incorrect">MD5 sum is incorrect (downloaded: %1$s, expected: %2$s)</string>
+    <string name="download_could_not_read_file">Could not read downloaded file: %s</string>
+    <string name="download_no_valid_apk">Downloaded file is not a valid APK (or incompatible)</string>
+    <string name="download_incorrect_package_name">Package name is incorrect (downloaded: %1$s, expected: %2$s)</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">Downloading %1$s failed: %2$d (%3$s)</string>
