--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -118,8 +118,8 @@
     <string name="settings_group_experimental">Expérimental</string>
     <string name="settings_disable_resources">Désactiver resource hooks</string>
     <string name="settings_disable_resources_summary">Solution pour éviter les conflits avec les moteurs de thème\n<b>ATTENTION:</b> Les modules qui essaient de modifier les ressources ne fonctionneront pas si vous activez ceci.</string>    
-    <string name="settings_performance_experiment" tools:ignore="UnusedResources">Expérimentation pour les performances</string>
-    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">Si vous activez ceci, les performances de votre système peuvent être améliorées, diminuées ou rester identiques. N`hésitez pas à essayer et à nous rapporter les effets obtenus (ou s\'il n\'y en a pas eu). Vous devez réinstaller le framework et redémarrer après avoir changé ce paramètre.</string>
+    <string name="settings_performance_experiment">Expérimentation pour les performances</string>
+    <string name="settings_performance_experiment_summary">Si vous activez ceci, les performances de votre système peuvent être améliorées, diminuées ou rester identiques. N`hésitez pas à essayer et à nous rapporter les effets obtenus (ou s\'il n\'y en a pas eu). Vous devez réinstaller le framework et redémarrer après avoir changé ce paramètre.</string>
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">Impossible de lire le journal:</string>
