--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="download_section_7d">Last 7 days</string>
     <string name="download_section_30d">Last 30 days</string>
     <string name="download_section_older">More than 30 days ago</string>
+    <string name="download_details_not_found">There is no module with package name \"%s\" in the repository.</string>
 
     <!-- Settings tab -->
     <string name="settings_group_installation">Installation</string>
