--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -125,8 +125,9 @@
     <string name="settings_performance_experiment" tools:ignore="UnusedResources">Performance experiment</string>
     <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">If you enable this, your system performance might either increase, decrease or stay the same. Feel free to try it and report back which effect you see (or if there is none at all). You need to reinstall the framework and reboot after changing this.</string>
     <string name="settings_group_app">Application</string>
-    <string name="settings_enable_dark_theme">Dark theme</string>
-    <string name="settings_enable_dark_theme_summary">Use a dark theme instead of the default light theme.</string>
+    <string name="settings_theme">Theme</string>
+    <string name="settings_theme_light">Light</string>
+    <string name="settings_theme_dark">Dark</string>
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">Could not read log:</string>
