Module-specific settings (for now: release type selection)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -88,14 +88,16 @@
     <string name="menuSearch">Search</string>
     <string name="menuReload">Reload</string>
     <string name="changes">Changes:</string>
-    <string name="description_page">Description</string>
-    <string name="versions_page">Versions</string>
+    <string name="download_details_page_description">Description</string>
+    <string name="download_details_page_versions">Versions</string>
+    <string name="download_details_page_settings">Settings</string>
     <string name="reltype_stable">Stable</string>
     <string name="reltype_stable_summary">Stable (low risk of bugs)</string>
     <string name="reltype_beta">Beta</string>
     <string name="reltype_beta_summary">Beta (some bugs to be expected)</string>
     <string name="reltype_experimental">Experimental</string>
     <string name="reltype_experimental_summary">Experimental (high risk of bugs)</string>
+    <string name="reltype_use_global_summary">Use global setting</string>
     <string name="download_author">by %s</string>
     <string name="download_unknown_author">unknown author</string>
     <string name="download_status_installed">Installed (version %s)</string>
